Semaforo con bindings

--- a/EjemploBindings/EjemploBindings/EjemploBindings.csproj
+++ b/EjemploBindings/EjemploBindings/EjemploBindings.csproj
@@ -12,5 +12,8 @@
     <EmbeddedResource Update="PanelColoresView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\SemaphoreView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
