--- a/EjemploBindings/EjemploBindings/EjemploBindings.csproj
+++ b/EjemploBindings/EjemploBindings/EjemploBindings.csproj
@@ -12,6 +12,9 @@
     <EmbeddedResource Update="PanelColoresView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\SampleListView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\SemaphoreView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
